# culture

./: .flake8  .gitignore  .markdownlint-cli2.yaml  .pr_agent.toml  .pylintrc  CHANGELOG.md  CLAUDE.md  QODO-FIX-PR-26.md  QODO-FIX-PR-30.md  README.md  _config.agentirc.yml  _config.culture.yml  _config.yml  culture.yaml  index.md  pyproject.toml  sitemap-main.html  sitemap.html  sonar-project.properties
.devague/frames/: culture-14-1-the-mesh-grows-itself-from-culture-a.json  culture-colleague-installs-the-colleague-front-in.json  culture-doctor-a-top-level-command-that-diagnoses.json  culture-installs-its-minds-as-one-line-extras-cult.json  culture-now-knows-when-its-residents-are-busy-ever.json  culture-now-runs-on-the-published-culture-core-eng.json  culture-s-bot-framework-is-now-a-thin-forward-to-a.json  culture-s-test-suite-now-tests-only-the-front-door.json  the-spark-culture-mesh-is-always-on-under-cli-prov.json
.devague/plans/: culture-14-1-the-mesh-grows-itself-from-culture-a.json  culture-doctor-a-top-level-command-that-diagnoses.json  culture-installs-its-minds-as-one-line-extras-cult.json  culture-now-knows-when-its-residents-are-busy-ever.json  culture-now-runs-on-the-published-culture-core-eng.json  culture-s-bot-framework-is-now-a-thin-forward-to-a.json  culture-s-test-suite-now-tests-only-the-front-door.json  the-spark-culture-mesh-is-always-on-under-cli-prov.json
.eidetic/memory/: culture-core__public.jsonl  culture__public.jsonl  default__public.jsonl
.github/scripts/: check-docs-coverage.py  test_check_docs_coverage_safety.py
.github/workflows/: pages.yml  publish.yml  security-checks.yml  tests.yml
_data/: agentculture_repos.yml  culture_subcommands.yml  sites.yml
_includes/: head_custom.html  repo_table.html  subcommand_table.html
_sass/custom/: custom.scss
agentirc/: __init__.py  __main__.py  cli.py  credentials.py  learn_prompt.py  mesh_config.py  persistence.py
agentirc/bots/: bot.py  bot_manager.py  config.py  http_listener.py  template_engine.py  virtual_client.py
agentirc/overview/: __init__.py  collector.py  model.py  renderer_text.py  renderer_web.py
agentirc/server/: __main__.py  channel.py  client.py  config.py  ircd.py  remote_client.py  room_store.py  rooms_util.py  server_link.py  skill.py
clients/claude/: __main__.py  agent_runner.py  config.py  daemon.py  socket_server.py  supervisor.py  webhook.py
culture/: __init__.py  __main__.py  _constants.py  cli.py  config.py  constants.py  credentials.py  learn_prompt.py  mesh_config.py  observer.py  persistence.py  pidfile.py
culture/agentirc/: CLAUDE.md  __init__.py  __main__.py  client.py  config.py  dm_spool_store.py  irc_targets.py  ircd.py  server_link.py
culture/bots/: __init__.py  bot.py  bot_manager.py  config.py  filter_dsl.py  http_listener.py  template_engine.py  virtual_client.py
culture/cli/: CLAUDE.md  __init__.py  _errors.py  _helpers.py  _output.py  agent.py  agents.py  agex.py  boss.py  bot.py  bridge.py  channel.py  chat.py  console.py  dashboard.py  doctor.py  introspect.py  mesh.py  server.py  skills.py  watcher.py
culture/clients/: _audit.py  _context_watch.py  _daemon_log.py  _mission.py  _perm_broker.py  _socket_link.py  _usage.py
culture/console/: __init__.py  app.py  client.py  commands.py  status.py
culture/dashboard/: __init__.py  server.py
culture/doctor/: __init__.py  checks.py  discovery.py  fix.py  model.py
culture/overview/: collector.py  model.py  renderer_text.py  renderer_web.py
culture/protocol/: replies.py
culture/server/: client.py  history_store.py  ircd.py  server_link.py  skill.py
culture/telemetry/: __init__.py  audit.py  context.py  metrics.py  tracing.py
culture/transport/: __init__.py  client.py  remote_client.py
culture/watcher/: __init__.py  __main__.py  alerts.py  patterns.py  service.py  state.py  watcher.example.yaml
culture_core/: __init__.py  __main__.py  _constants.py  aio.py  config.py  constants.py  credentials.py  formatting.py  learn_prompt.py  mesh_config.py  observer.py  persistence.py  pidfile.py  resource_view.py
culture_core/agentirc/: CLAUDE.md  __init__.py  config.py
culture_core/bots/: __init__.py  bot.py  bot_manager.py  config.py  filter_dsl.py  http_listener.py  template_engine.py  virtual_client.py
docs/: README.md  SECURITY.md  agent-client.md  agent-harness-spec.md  agent-lifecycle.md  agentic-self-learn.md  attention.md  bots.md  cc-plugin-python-resolver.md  ci.md  cli.md  copilot-backend.md  coverage-baseline.md  cross-project-usage.md  culture-cli.md  culture-home-env.md  design.md  dev-policy.md  docs-site.md  doctor.md  durable-mesh.md  getting-started.md  grow-your-agent.md  harness-conformance.md  index.md  install-extras.md  layer1-core-irc.md  layer2-attention.md  layer3-skills.md  layer4-federation.md  layer5-agent-harness.md  manifest-migration.md  ops-tooling.md  overview.md  publishing.md  reflective-development.md  resident-presence.md  rooms.md  server-architecture.md  server-name-drift-recovery.md  (+12 more)
protocol/: commands.py  message.py  replies.py
scripts/: always-on-probe.sh
server/: channel.py  client.py
tests/: _fake_engine.py  _sdk_stub.py  conftest.py  test_acp_daemon.py  test_agent_argparse_errors.py  test_agent_compact.py  test_agent_install_cli.py  test_agent_runner.py  test_agentirc_config_reexport.py  test_agentirc_config_shim.py  test_archive.py  test_attention_overrides_config.py  test_audit_writer.py  test_backend_parity.py  test_backend_sdk_hints.py  test_boss_brief_verify.py  test_boss_cli.py  test_boss_grant_ceiling.py  test_boss_model_inherit.py  test_bot.py  test_bot_config.py  test_bot_config_fires_event_toplevel.py  test_bot_manager.py  test_bots_integration.py  test_bridge_main_nick_validation.py  test_channel.py  test_channel_archive.py  test_channel_cli.py  test_channel_message_guard.py  test_chat_shim.py  test_claude_runner_inheritance.py  test_cli_afi.py  test_cli_afi_devex.py  test_cli_agent.py  test_cli_agents.py  test_cli_agents_spans.py  test_cli_agex.py  test_cli_bot.py  test_cli_branding.py  test_cli_console.py  (+157 more)
(+580 files in other folders)
