[project]
name = "culture"
version = "8.19.7"
description = "The professional workspace for agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "Ori Nachum"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
    "Framework :: AsyncIO",
]
dependencies = [
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "claude-agent-sdk>=0.1",
    "mistune>=3.0",
    "aiohttp>=3.9",
    "textual>=1.0",
    "agex-cli>=0.13,<1.0",
    "afi-cli>=0.3,<1.0",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
    "opentelemetry-semantic-conventions>=0.46b0",
]

[project.urls]
Homepage = "https://github.com/OriNachum/culture"

[project.scripts]
culture = "culture.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["culture"]

[tool.hatch.build.targets.wheel.force-include]
"culture/clients/claude/skill/SKILL.md" = "culture/clients/claude/skill/SKILL.md"
"culture/clients/codex/skill/SKILL.md" = "culture/clients/codex/skill/SKILL.md"
"culture/clients/copilot/skill/SKILL.md" = "culture/clients/copilot/skill/SKILL.md"
"culture/clients/acp/skill/SKILL.md" = "culture/clients/acp/skill/SKILL.md"
"culture/skills/culture/SKILL.md" = "culture/skills/culture/SKILL.md"
"culture/overview/web/style.css" = "culture/overview/web/style.css"
"culture/bots/system/welcome/bot.yaml" = "culture/bots/system/welcome/bot.yaml"

[project.optional-dependencies]
copilot = ["github-copilot-sdk"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-xdist>=3.0",
    "pytest-cov>=4.1",
    "bandit>=1.7.5",
    "pylint>=2.17.0",
    "flake8>=6.1",
    "flake8-bandit>=4.1.1",
    "flake8-bugbear>=23.7.10",
    "coverage>=7.2.0",
    "safety>=2.3.0",
    "pre-commit>=3.5.0",
    "isort>=5.12.0",
    "black>=23.7.0",
    "mypy>=1.10",
]

[tool.coverage.run]
source = ["culture"]
omit = [
    "culture/__pycache__/*",
]

[tool.coverage.report]
fail_under = 50
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["culture"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.bandit]
# packages/ is the cite-don't-import template; tests/ exercises real
# behavior with realistic IRC/server fixtures. Both have intentional
# patterns bandit would otherwise flag.
exclude_dirs = ["tests", "packages"]
# Each skip entry has a one-line rationale so future audits can re-check.
# Notable change in v8.19.6: dropped B606 (start_process_with_no_shell) —
# we WANT bandit to flag any new direct-shell launches so the IRC
# injection class (PR #30 Qodo finding) can't recur.
skips = ["B101", "B104", "B105", "B108", "B110", "B112", "B310", "B404", "B406", "B603", "B607"]

# Mypy: starts lenient project-wide (existing untyped code doesn't fail
# CI), with strict carve-outs on security-sensitive modules as the
# wedge for gradual full-strict adoption.
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "silent"
check_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true

# Wedge: full strict on the IRC target validator (CRLF injection guard).
# Any regression on this module fails CI immediately.
[[tool.mypy.overrides]]
module = "culture.agentirc.irc_targets"
disallow_untyped_defs = true
disallow_any_unimported = true
warn_return_any = true
check_untyped_defs = true

# Wedge: type-check the permission broker (the PreToolUse hook + grant
# ceiling enforcement) so signature drift between broker and daemons
# surfaces in CI.
[[tool.mypy.overrides]]
module = "culture.clients._perm_broker"
check_untyped_defs = true
warn_return_any = true

# Wedge: type-check the mission persistence module (per-agent file I/O
# with rotation) so the rotation invariant doesn't silently break.
[[tool.mypy.overrides]]
module = "culture.clients._mission"
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
