[project]
name = "culture"
version = "13.7.1"
description = "The professional workspace for agents."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{name = "Ori Nachum"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
    "Framework :: AsyncIO",
]
dependencies = [
    "pyyaml>=6.0",
    # The Culture engine. culture is the thin front-door; the reusable core
    # (cli/clients/protocol/telemetry/doctor/… — the culture_core namespace)
    # lives in this dependency and is aliased back into the culture.* namespace
    # by the meta-path finder in culture/__init__.py. Pinned to 0.5.x: the caps
    # below mirror culture-core's validated bounds (see the comment on them).
    "culture-core~=0.5.0",
    "agentirc-cli>=9.7.0,<10",
    "cultureagent~=0.4.0",
    "anthropic>=0.40",
    "claude-agent-sdk>=0.1",
    "mistune>=3.0",
    "aiohttp>=3.9",
    # Upper bounds capped to the versions the engine is validated against (these
    # match the caps culture-core 0.4.0 declares). Without them a fresh uv.lock
    # would resolve to newer releases that broke the afi / agent_experience import
    # modules, the per-test OTel InMemoryMetricReader injection (SDK 1.42), and the
    # copilot backend (github-copilot-sdk 0.2.3+). Standalone drift-bomb fix and a
    # precursor to the culture-core cutover — see
    # docs/specs/2026-06-14-culture-now-runs-on-the-published-culture-core-eng.md.
    "agex-cli>=0.13,<0.14",
    "agtag>=0.1,<1.0",
    "afi-cli>=0.3,<0.4",
    "steward-cli>=0.16,<1.0",
    "irc-lens>=0.5.3,<1.0",
    "opentelemetry-api>=1.25,<1.42",
    "opentelemetry-sdk>=1.25,<1.42",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25,<1.42",
    "opentelemetry-semantic-conventions>=0.46b0,<0.63b0",
    "opentelemetry-instrumentation-aiohttp-server>=0.46b0,<0.63b0",
]

[project.urls]
Homepage = "https://github.com/OriNachum/culture"

[project.scripts]
# Repointed to the engine entry point (culture-core ships the same command). The
# in-tree culture.cli is gone; culture_core.cli:main is the identical CLI.
culture = "culture_core.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# culture ships only the front-door package: culture/__init__.py (the version
# shim + the meta-path alias finder onto culture_core). The engine modules and
# their bundled data (skills SKILL.md/scripts, overview/web/style.css, welcome
# bot.yaml) ship from the culture-core dependency now — the in-tree copies and
# their force-include manifest were removed in the cutover.
packages = ["culture"]

[project.optional-dependencies]
# Forward to culture-core's copilot extra so the validated github-copilot-sdk
# pin (0.2.0 — 0.2.3+/1.0 regressed the backend) is sourced from the engine.
copilot = ["culture-core[copilot]"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-xdist>=3.0",
    "pytest-cov>=4.1",
    "bandit>=1.7.5",
    "pylint>=2.17.0",
    "flake8>=6.1",
    "flake8-bandit>=4.1.1",
    "flake8-bugbear>=23.7.10",
    "coverage>=7.2.0",
    "safety>=2.3.0",
    "pre-commit>=3.5.0",
    "isort>=5.12.0",
    "black>=23.7.0",
]

[tool.coverage.run]
source = ["culture"]
# parallel + concurrency are required for pytest-xdist (`-n auto`) to produce
# per-worker `.coverage.*` files that `coverage combine` merges into a single
# `.coverage`. Without these, only one worker's slice is reported and modules
# exercised by every test (e.g. transport/client.py) look under-covered.
# sigterm = true flushes worker coverage on graceful shutdown.
parallel = true
concurrency = ["thread", "multiprocessing"]
sigterm = true
omit = [
    "culture/__pycache__/*",
]

[tool.coverage.report]
# After the culture-core cutover (13.7.0, #454) `source = ["culture"]` measures
# only the front-door package (culture/__init__.py + culture/__main__.py); the
# engine moved to culture-core and is coverage-gated in culture-core's own CI.
# The front-door is small and fully exercised (100%), so the 90 floor still holds
# trivially. (Pre-cutover this ratchet guarded the in-tree engine to 90% — see
# docs/coverage-baseline.md for that history.) The retained engine suite still
# runs here as the per-pin behaviour guard; it just isn't what this floor counts.
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "if sys\\.platform == .win32.",
]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["culture"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.bandit]
exclude_dirs = ["tests", "packages"]
skips = ["B101", "B104", "B105", "B108", "B110", "B112", "B310", "B404", "B406", "B603", "B606", "B607"]
