[project]
name = "culture"
version = "14.3.1"
description = "The professional workspace for agents."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{name = "Ori Nachum"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
    "Framework :: AsyncIO",
]
dependencies = [
    # The culture_core engine ships IN-TREE again since the 14.0.0 merge-back
    # (issue #462) — there is no culture-core dependency anymore. The caps below
    # are the bounds the engine is validated against; they came back with it.
    "pyyaml>=6.0",
    # Floor at 9.11: the agent-accessibility release (CLI client verbs, public
    # reconnecting transport) the mesh's agentic access relies on — see
    # docs/specs/2026-07-03-the-spark-culture-mesh-is-always-on-under-cli-prov.md (c12).
    "agentirc-cli>=9.11.0,<10",
    # Bumped 0.4->0.12 for the colleague backend: cultureagent 0.12.0 is the
    # first release shipping clients/colleague (the ColleagueDaemon wrapping
    # colleague[culture]'s ColleagueHarness) and the backend-colleague extra
    # (three-minds t1, upstream cultureagent#45). Validated against the full
    # engine suite on the bump.
    "cultureagent~=0.12.0",
    "mistune>=3.0",
    "aiohttp>=3.9",
    # agex-cli capped at the minor series culture validated against:
    # the import modules were renamed in later 0.x releases (agex-cli's
    # `agent_experience` -> `devex` by 0.29), so the engine's
    # `from agent_experience.cli import app` breaks on a fresh `<1.0` resolve.
    # Bump only alongside the code that adapts to the renamed modules, and
    # re-run the full suite.
    # agentfront is afi-cli's renamed successor; cap at the validated minor
    # per this repo's pin philosophy.
    "agex-cli>=0.13,<0.14",
    "agtag>=0.1,<1.0",
    "agentfront>=0.20,<0.21",
    "steward-cli>=0.16,<1.0",
    # Floor at 0.9.1: image/audio media (upload, capability URLs, mic) landed in
    # 0.8.0, agentfront adoption + fixes in 0.9.1 — the console the mesh serves
    # must have both (same spec, c12). irc-lens >=0.9.1 needs Python >=3.12.
    "irc-lens>=0.9.1,<1.0",
    # OTel capped below 1.42 (the 0.6x track below 0.63b0): the metric-reader
    # injection the telemetry test fixtures rely on (per-test set_meter_provider
    # + InMemoryMetricReader) stops capturing under SDK 1.42, so the integration
    # + clients metric tests go silently empty. culture validated against 1.41.x.
    # The OTel packages are version-coupled — cap them as a set. Lift together
    # when the engine is verified against a newer SDK.
    "opentelemetry-api>=1.25,<1.42",
    "opentelemetry-sdk>=1.25,<1.42",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25,<1.42",
    "opentelemetry-semantic-conventions>=0.46b0,<0.63b0",
    "opentelemetry-instrumentation-aiohttp-server>=0.46b0,<0.63b0",
]

[project.urls]
Homepage = "https://github.com/OriNachum/culture"

[project.scripts]
# Both command names ship from this one distribution since the merge-back
# (#462): `culture` is the primary CLI; `culture-core` is a compatibility alias
# for standalone-era installs and generated service units. The CLI derives its
# program name from argv[0], so help/usage text follows whichever was invoked.
culture = "culture_core.cli:main"
culture-core = "culture_core.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# One distribution, both packages (merge-back, #462): the culture front-door
# (version shim + the meta-path alias finder onto culture_core) and the
# culture_core engine itself.
packages = ["culture", "culture_core"]

[tool.hatch.build.targets.wheel.force-include]
# Non-.py data files hatchling would otherwise skip. A missing entry is a silent
# runtime break, not a build error — verify against a built wheel, not the sdist.
"culture_core/skills/culture/SKILL.md" = "culture_core/skills/culture/SKILL.md"
"culture_core/skills/communicate/SKILL.md" = "culture_core/skills/communicate/SKILL.md"
"culture_core/skills/communicate/scripts/post-issue.sh" = "culture_core/skills/communicate/scripts/post-issue.sh"
"culture_core/skills/communicate/scripts/post-comment.sh" = "culture_core/skills/communicate/scripts/post-comment.sh"
"culture_core/skills/communicate/scripts/fetch-issues.sh" = "culture_core/skills/communicate/scripts/fetch-issues.sh"
"culture_core/skills/communicate/scripts/mesh-message.sh" = "culture_core/skills/communicate/scripts/mesh-message.sh"
"culture_core/skills/communicate/scripts/templates/skill-update-brief.md" = "culture_core/skills/communicate/scripts/templates/skill-update-brief.md"
"culture_core/skills/communicate/scripts/templates/skill-new-brief.md" = "culture_core/skills/communicate/scripts/templates/skill-new-brief.md"
"culture_core/overview/web/style.css" = "culture_core/overview/web/style.css"
"culture_core/bots/system/welcome/bot.yaml" = "culture_core/bots/system/welcome/bot.yaml"

[project.optional-dependencies]
# Pinned to exactly the github-copilot-sdk version culture validated against.
# This SDK regresses the copilot backend even across 0.2.x patches: 0.2.0 is
# clean (8 copilot tests pass), but 0.2.3 fails a test and hangs in teardown,
# and 1.0 is an outright breaking API change. Bump only alongside backend code
# that adapts to the new release (all-backends rule), and re-run `pytest -k
# copilot` with the extra installed.
copilot = ["cultureagent[backend-copilot]~=0.12.0", "github-copilot-sdk==0.2.0"]
claude = ["cultureagent[backend-claude]~=0.12.0"]
acp = ["cultureagent[backend-acp]~=0.12.0"]
# The codex backend needs no SDK — kept for all-backends symmetry.
codex = []
# colleague: the enforced third mind (three-minds t1). cultureagent's
# backend-colleague extra pulls colleague[culture] (the resident
# ColleagueHarness culture wraps). Symmetric with claude/codex — no culture-side
# SDK of its own.
colleague = ["cultureagent[backend-colleague]~=0.12.0"]
# Concrete union of the per-backend extras (codex contributes nothing) — a
# self-referential culture[...] entry would emit circular Requires-Dist
# metadata some resolvers mishandle.
all-backends = [
    "cultureagent[backend-claude,backend-acp,backend-copilot,backend-colleague]~=0.12.0",
    "github-copilot-sdk==0.2.0",
]

[dependency-groups]
dev = [
    # Backend SDKs needed by the test suite / conftest (moved from base
    # dependencies — the culture_core engine itself imports neither).
    "anthropic>=0.40",
    "claude-agent-sdk>=0.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-xdist>=3.0",
    "pytest-cov>=4.1",
    "bandit>=1.7.5",
    "pylint>=2.17.0",
    "flake8>=6.1",
    "flake8-bandit>=4.1.1",
    "flake8-bugbear>=23.7.10",
    "coverage>=7.2.0",
    "safety>=2.3.0",
    "pre-commit>=3.5.0",
    "isort>=5.12.0",
    "black>=23.7.0",
]

[tool.coverage.run]
# Both packages: the culture front-door and the in-tree culture_core engine
# (merge-back, #462).
source = ["culture", "culture_core"]
# parallel + concurrency are required for pytest-xdist (`-n auto`) to produce
# per-worker `.coverage.*` files that `coverage combine` merges into a single
# `.coverage`. Without these, only one worker's slice is reported and modules
# exercised by every test (e.g. transport/client.py) look under-covered.
# sigterm = true flushes worker coverage on graceful shutdown.
parallel = true
concurrency = ["thread", "multiprocessing"]
sigterm = true
# Emit repo-relative paths in coverage.xml so SonarCloud maps them to
# sonar.sources (absolute/.venv paths fail to map → empty coverage).
relative_files = true
omit = [
    "culture/__pycache__/*",
    "culture_core/__pycache__/*",
]

[tool.coverage.report]
# Ratchet floor from the completed 60→90 sweep (docs/coverage-baseline.md),
# guarding the in-tree engine again since the merge-back (#462). A drop below
# 90 is a regression, not a re-baseline.
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "if sys\\.platform == .win32.",
]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["culture", "culture_core"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.bandit]
exclude_dirs = ["tests", "packages"]
skips = ["B101", "B104", "B105", "B108", "B110", "B112", "B310", "B404", "B406", "B603", "B606", "B607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
